book-store-ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: book-store
  labels:
      name: book-store
