book-store-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: book-store-deployment
  labels:
    app: books-store
spec:
  replicas: 2
  selector:
    matchLabels: 
    app: book-store
  tamplate:
    metadata:
      labels:
        app: book-store
    spec:
      containers:
      - name: book-store
        image: book-store
        ports:
        - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata: 
  name: book-store-service
spec:
  selector:
    app: book-store
  ports:
    - protocol: TCP
      port: 8000
      targrtPort: 8000
